# pyclaw

./: LICENSE  README.md  config.yaml  pyproject.toml
skills/media/: openai-whisper.SKILL.md  spotify-player.SKILL.md
skills/notes/: apple-notes.SKILL.md  notion.SKILL.md  obsidian.SKILL.md
skills/system/: peekaboo.SKILL.md  tmux.SKILL.md
skills/tasks/: apple-reminders.SKILL.md  things-mac.SKILL.md
skills/utility/: github.SKILL.md  summarize.SKILL.md  weather.SKILL.md
src/pyclaw/: __init__.py  cli.py  server.py
src/pyclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyclaw/agent/: __init__.py  agent.py  browser_tools.py  builtin_tools.py  tool_guard.py  tools.py
src/pyclaw/channels/: __init__.py  base.py  imessage.py  manager.py  security.py  wechat.py  wechat_mac.py
src/pyclaw/core/: __init__.py  config.py  event_bus.py  logger.py  resilience.py
src/pyclaw/llm/: __init__.py  base.py  claude.py  openai_compat.py  router.py  task_detector.py
src/pyclaw/memory/: __init__.py  database.py  manager.py  models.py  workspace.py
src/pyclaw/scheduler/: __init__.py  heartbeat.py
src/pyclaw/skills/: __init__.py  dependency.py  executor.py  loader.py  models.py  registry.py
tests/: __init__.py  test_agent.py  test_builtin_tools.py  test_channel_security.py  test_channels.py  test_core.py  test_llm.py  test_memory.py  test_resilience.py  test_scheduler.py  test_skills.py  test_task_detector.py  test_tool_guard.py  test_wechat_mac_live.py
